- fixed a bug where a player disconnects and and is still queued - code readability